--- a/my-app/src/app/search/search.component.html
+++ b/my-app/src/app/search/search.component.html
@@ -6,8 +6,8 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul ngbNav routerLinkActive="active">
-        <li  ngbNavItem="select">
-          <a ngbNavLinkclass class="nav-link" routerLink="select">Name</a>
+        <li  ngbNavItem="select/:name">
+          <a ngbNavLinkclass class="nav-link" routerLink="/select/:name">Name</a>
         </li>
         <li ngbNavItem="select/:type">
           <a gbNavLinkclass class="nav-link" routerLink="select/:type">Type</a>
