select compontents work and are routed

--- a/my-app/src/app/random/random.component.html
+++ b/my-app/src/app/random/random.component.html
@@ -1,1 +1,7 @@
 <p>random works!</p>
+<div>
+    <h1>Recipes</h1>
+    <ul *ngFor="let recipeName of (recipeNames | async)">
+      <li><a [routerLink]="['/recipe', recipeName]">{{recipeName.name}}</a></li>
+    </ul>
+  </div>
