--- a/my-app/src/app/search/search.component.html
+++ b/my-app/src/app/search/search.component.html
@@ -9,8 +9,8 @@
         <li  ngbNavItem="select">
           <a ngbNavLinkclass class="nav-link" routerLink="/select">All</a>
         </li>
-        <li  ngbNavItem="select/:name">
-          <a ngbNavLinkclass class="nav-link" routerLink="/select/:name">Name</a>
+        <li  ngbNavItem="select-by-name">
+          <a ngbNavLinkclass class="nav-link" routerLink="/select-by-name">Name</a>
         </li>
         <li ngbNavItem="select-by-type">
           <a gbNavLinkclass class="nav-link" routerLink="/select-by-type">Type</a>
