started beutifying(?) and getting consistant look

--- a/my-app/src/app/add-recipe/add-recipe.component.html
+++ b/my-app/src/app/add-recipe/add-recipe.component.html
@@ -1,12 +1,15 @@
-<p>add-recipe works!</p>
-<form>
+<div class="card">
+  <h3>Add Recipe</h3>
+  <form>
     <input type="text" class="form-control" placeholder="Name">
     <input type="text" class="form-control" placeholder="Type: ex: Mediterranean, South Western">
-    <input type="text" class="form-control" placeholder="The Primay Ingredient: (that means one) ex: Chicken, Tofu, Human">
-       
+    <input type="text" class="form-control"
+      placeholder="The Primay Ingredient: (that means one) ex: Chicken, Tofu, Human">
+
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Instructions</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
     </div>
   </form>
   <input class="btn btn-primary" type="submit" value="Submit">
+</div>
