--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Name Pending</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul ngbNav routerLinkActive="active">
-      <li  ngbNavItem="search">
+      <li ngbNavItem="search">
         <a ngbNavLinkclass class="nav-link" routerLink="search">Search</a>
       </li>
       <li ngbNavItem="random">
@@ -18,6 +18,8 @@
     </ul>
   </div>
 </nav>
-<div class="container">
+
+
+<div class="card">
   <router-outlet></router-outlet>
 </div>
