--- a/my-app/src/app/random/random.component.html
+++ b/my-app/src/app/random/random.component.html
@@ -1,4 +1,4 @@
-<p>random works!</p>
+<h3>Random!</h3>
 <div>
   <ul *ngFor="let randRecipe of (randRecipes | async)">
     <li><a [routerLink]="['/recipe', randRecipe]">{{randRecipe.name}}</a></li>
