--- a/my-app/src/app/select-by-name/select-by-name.component.html
+++ b/my-app/src/app/select-by-name/select-by-name.component.html
@@ -1,17 +1,19 @@
-<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()" novalidate>
- 
-    <p>
-      <label for="name">Name </label>
-      <input type="text" id="name" name="name" formControlName="name">
-    </p>
-    <p>
-      <button type="submit" >Submit</button>
-    </p>
-  </form>
-  
-  <div *ngIf = "show">
-      <h1>Recipes</h1>
-      <ul *ngFor="let recipeByName of (recipeByNames | async)">
-        <li><a [routerLink]="['/recipe', recipeByName]">{{recipeByName.name}}</a></li>
-      </ul>
-  </div>
+<div class="card">
+  <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()" novalidate>
+    <h3>Search by Name: </h3>
+      <p>
+        <label for="name">Name </label>
+        <input type="text" id="name" name="name" formControlName="name">
+      </p>
+      <p>
+        <input class="btn btn-primary" type="submit" value="Submit">
+      </p>
+    </form>
+    
+    <div *ngIf = "show">
+        <h1>Recipes</h1>
+        <ul *ngFor="let recipeByName of (recipeByNames | async)">
+          <li><a [routerLink]="['/recipe', recipeByName]">{{recipeByName.name}}</a></li>
+        </ul>
+    </div>
+</div>
