--- a/my-app/src/styles.scss
+++ b/my-app/src/styles.scss
@@ -2,3 +2,10 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+* {
+    background-color: lightgreen;
+    nav {
+        color: gray;
+    }
+    
+}
